canary_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: k8s-canary
  labels:
    name: k8s-canary
