canary_svc_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v1
  namespace: k8s-canary
  labels:
    app: web
spec:
  selector:
    app: web-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
