canary_svc_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v2
  namespace: k8s-canary
  labels:
    app: web
spec:
  selector:
    app: web-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
